<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountActivity.ChangePassActivity"
    android:background="@color/blue_gray"
    android:layout_gravity="center">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolregist"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/bg_leaf"
            android:gravity="center"
            android:layout_gravity="center"
            style="@style/AppTheme.AppBarOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/change_password"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/btn_prev_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClickView"
                        android:src="@drawable/ic_left"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_new_password"
            android:layout_gravity="left"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_change"
            android:hint="@string/new_password"
            android:lines="1"
            android:drawableStart="@drawable/ic_action_lock"
            android:drawablePadding="8dp"
            android:padding="15dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/repass"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:lines="1"
            android:inputType="textPassword"
            android:drawablePadding="8dp"
            android:imeOptions="actionDone"
            android:drawableStart="@drawable/ic_action_lock"
            android:background="@drawable/bg_change"
            android:hint="@string/re_password"
            android:padding="15dp"
            android:textSize="14sp"/>

            <Button
                android:id="@+id/submit_pass"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/transparent_bg_bordered"
                android:text="Change Password"
                android:textSize="14sp"
                android:layout_marginTop="45dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"/>
        </LinearLayout>
    </LinearLayout>

